# dum

./: CMakeLists.txt
cmake/: uvw.cmake
debian/: changelog  control  copyright  rules
misc/dbus/system-services/: org.deepin.UpdateManager1.service
misc/dbus/system.d/: org.deepin.UpdateManager1.conf
misc/polkit-1/rules.d/: org.deepin.update-manager.rules
misc/systemd/system/: deepin-update-manager.service  dum-offline-update.service  dum-upgrade-stdout.socket  dum-upgrade@.service
misc/sysusers.d/: deepin-update-manager.conf
src/: CMakeLists.txt  ManagerAdaptor.cpp  ManagerAdaptor.h  Report.cpp  Report.h  example.cpp  example.h  main.cpp  org.freedesktop.systemd1.Manager.xml  org.freedesktop.systemd1.Unit.xml
src/dbusx/: bus.cpp  bus.h  bus_private.h  interface.h  message.cpp  message.h  method.h  signal.h  vtable.h
